@@ -1,5 +1,10 @@
 2012-10-15  Corinna Vinschen  <corinna@vinschen.de>
 
+	* fhandler_raw.cc (fhandler_dev_raw::fhandler_dev_raw): Drop gratuitous
+	initializing from previous patch.
+
+2012-10-15  Corinna Vinschen  <corinna@vinschen.de>
+
 	* fhandler_floppy.cc (fhandler_dev_floppy::open): Fix comment.
 
 2012-10-15  Christopher Faylor  <me.cygwin2012@cgf.cx>
